# Project_mlops_ho_dominic_3mct

./: assignment_dominic.docx  ~$signment_dominic.docx
fastapi-env/fastapi/: .env_example.py  Dockerfile  database.py  docker-compose.yaml  main.py  prestart.sh  pyproject.toml
fastapi-env/fastapi/AI_model/: diabetes_model.ipynb
fastapi-env/fastapi/kubernetes/: deployment.yaml  regcredassignment_secret.yaml  token.txt
fastapi-env/fastapi/models/: patient_model.py
fastapi-env/fastapi/routers/: patient_router.py
fastapi-env/fastapi/schemas/: patient.py
